# teatui

./: .gitignore  AGENTS.md  Cargo.toml  justfile
docs/: bug-windows-tui-freeze.md  design.md  rewrite-plan.md  stacked-pr-plan.md  stacked-pr-prefix-cache-plan.md
docs/freeze-logs/: 2026-05-31T1426-freeze-arrow-keys-then-q.md  2026-05-31T1926-crossterm-panic.md
docs/tasks/: 0001-2026-05-25-polished-pr-gen-app-loop-and-state.md  0002-2026-05-25-polished-pr-gen-command-runner.md  0003-2026-05-25-polished-pr-gen-repo-discovery.md  0004-2026-05-25-polished-pr-gen-revset-selector.md  0005-2026-05-25-polished-pr-gen-form-editing.md  0006-2026-05-25-polished-pr-gen-context-collection.md  0007-2026-05-25-polished-pr-gen-prompt-manifest.md  0008-2026-05-25-polished-pr-gen-ollama-client.md  0009-2026-05-25-polished-pr-gen-draft-review.md  000a-2026-05-25-polished-pr-gen-handoff-polish.md
docs/tasks/implemented/: 0005-2026-05-25-polished-pr-gen-form-editing.md
docs/tasks/open/: 0008-2026-05-25-polished-pr-gen-ollama-client.md  000a-2026-05-25-polished-pr-gen-handoff-polish.md
docs/tasks/reviewed/: 0002-2026-05-25-polished-pr-gen-command-runner.md  0003-2026-05-25-polished-pr-gen-repo-discovery.md  0006-2026-05-25-polished-pr-gen-context-collection.md
docs/tickets/implemented/: 00007-2026-05-25-polished-pr-gen-prompt-manifest.md  00008-2026-05-25-polished-pr-gen-ollama-client.md  0000g-2026-05-26-d7cc7ec7-llm-config-schema.md  (+34 more)
examples/: dump_prompt.rs
scripts/: llama-integration.ps1  wsl-build.ps1  wsl-run.ps1
src/: action.rs  app.rs  bookmark_naming.rs  colors.rs  command.rs  config.rs  context.rs  event.rs  external.rs  generate.rs  input.rs  jj.rs  lib.rs  llm.rs  logging.rs  main.rs  ollama.rs  prompt.rs  pull_requests.rs  repo.rs  repo_options.rs  tea.rs  terminal.rs  tui.rs  ui.rs
src/domain/: bookmark.rs  context.rs  execute.rs  jj_mutate.rs  llm.rs  mod.rs  probe.rs  process.rs  prompt.rs  stack.rs  status_store.rs
src/runtime/: cache.rs  http.rs  jobs.rs  mod.rs
src/screens/: backend_picker.rs  generate.rs  landing.rs  mod.rs  status.rs  theme.rs  util.rs  widgets.rs
tests/: llama_integration.rs  pr_generation_integration.rs  render_smoke.rs  windows_pr_generation_integration.rs
(+112 files in other folders)
