[package]
name = "teatui"
version = "0.1.0"
edition = "2024"
default-run = "teatui"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
color-eyre = "0.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
config = "0.15"
dirs = "6"
humantime = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
ratatui-textarea = "0.9"
arboard = "3"
opener = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 4
panic = "abort"
strip = true
