[package]
name = "teatui"
version = "0.1.0"
edition = "2024"
default-run = "teatui"

[dependencies]
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
crossterm = "0.29.0"
crossbeam-channel = "0.5.15"
ureq = { version = "3.3.0", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
color-eyre = "0.6.5"
humantime = "2.3.0"
config = "0.15.23"
dirs = "6.0.0"
arboard = "3.6.1"
opener = "0.8.4"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = "thin"
codegen-units = 4
panic = "abort"
strip = true
