[package]
name = "teatui"
version = "0.1.0"
edition = "2024"
default-run = "teatui"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
crossbeam-channel = "0.5"
ureq = { version = "2", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
humantime = "2"
config = "0.15"
dirs = "6"
arboard = "3"
opener = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 4
panic = "abort"
strip = true
